[Java] Upgrade to Build Scan 3.0, Shadow 5.2.0, ByteBuddy 1.10.2, and support Java building versions greater than 8.